objects/LLC_BI__Covenant_Type__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CSiDP__CSi_Financial_Indicator_Covenant_Code__c</fullName>
        <description>This field is optional. It is used for document preparation. This field is used to map a Financial Indicator Covenant Type to a CSi Covenant code.</description>
        <inlineHelpText>Used to map a Financial Indicator Covenant Type to a CSi Covenant code.</inlineHelpText>
        <label>CSi Financial Indicator Covenant Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Notices to Claims, Litigations; Notice to Adverse Events</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Confirmatory Documents and Actions</fullName>
                </value>
                <value>
                    <fullName>Payment of Taxes</fullName>
                </value>
                <value>
                    <fullName>Business Existence and Operations</fullName>
                </value>
                <value>
                    <fullName>Environmental Compliance</fullName>
                </value>
                <value>
                    <fullName>Use of Proceeds</fullName>
                </value>
                <value>
                    <fullName>Pay Limitations</fullName>
                </value>
                <value>
                    <fullName>No Borrowings, Guarantees, or Loans</fullName>
                </value>
                <value>
                    <fullName>No Encumbrances or Transfer of Assets</fullName>
                </value>
                <value>
                    <fullName>No Dividends, Distribution and Redemption</fullName>
                </value>
                <value>
                    <fullName>No Loan or Investments</fullName>
                </value>
                <value>
                    <fullName>Working Capital</fullName>
                </value>
                <value>
                    <fullName>EBITDA (Earnings Before Interest, Taxes, Depreciation and Amortization)</fullName>
                </value>
                <value>
                    <fullName>Net Worth</fullName>
                </value>
                <value>
                    <fullName>Tangible Net Worth</fullName>
                </value>
                <value>
                    <fullName>Current Ratio</fullName>
                </value>
                <value>
                    <fullName>Leverage Ratio</fullName>
                </value>
                <value>
                    <fullName>Debt Service Coverage Ratio</fullName>
                </value>
                <value>
                    <fullName>Leases and Rents Ratio</fullName>
                </value>
                <value>
                    <fullName>Fixed Charge Coverage Ratio</fullName>
                </value>
                <value>
                    <fullName>Net Cash Flow</fullName>
                </value>
                <value>
                    <fullName>Total Debt to EBITDA Ratio</fullName>
                </value>
                <value>
                    <fullName>Account Profitability</fullName>
                </value>
                <value>
                    <fullName>All Affirmative Covenants</fullName>
                </value>
                <value>
                    <fullName>All Negative Covenants</fullName>
                </value>
                <value>
                    <fullName>All Financial Covenants</fullName>
                </value>
                <value>
                    <fullName>All Covenants</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSiDP__CSi_Financial_Statement_Covenant_Type__c</fullName>
        <description>This field is optional. It is used for document preparation. This field is used to map a Financial Statement Covenant Type to a CSi Covenant code.</description>
        <inlineHelpText>Used to map a Financial Statement Covenant Type to a CSi Covenant code.</inlineHelpText>
        <label>CSi Financial Statement Covenant Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Financial Statements</fullName>
                </value>
                <value>
                    <fullName>Personal Financial Statements</fullName>
                </value>
                <value>
                    <fullName>Annual Statements</fullName>
                </value>
                <value>
                    <fullName>Tax Returns</fullName>
                </value>
                <value>
                    <fullName>Personal Tax Returns</fullName>
                </value>
                <value>
                    <fullName>Rent Rolls</fullName>
                </value>
                <value>
                    <fullName>Borrowing Base Certificates</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Category__c</fullName>
        <description>This field is required and is manually populated. It identifies the category of the associated covenant record (such as Financial Requirements or Insurance Requirements). Finanical Statement Requirement and Financial Indicator covenants can be automatically tested using Spreads.</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Financial Statement Requirements</fullName>
                </value>
                <value>
                    <fullName>Financial Indicators</fullName>
                </value>
                <value>
                    <fullName>Default Covenant</fullName>
                </value>
                <value>
                    <fullName>Term Covenants</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Financial_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users manually select this optional checkbox field. This field is used to define Covenant Types as Financial Indicators. When users select this field, it allows for Financial Indicators to have a custom category. By default, this field is not selected.</description>
        <label>Financial Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WKEDP__Expere_Financial_Indicator_Covenant_Code__c</fullName>
        <description>This field is optional. It is used for document preparation. This field is used to map a Financial Indicator Covenant Type to an Expere Covenant code.</description>
        <inlineHelpText>Used to map a Financial Indicator Covenant Type to an Expere Covenant code.</inlineHelpText>
        <label>Expere Financial Indicator Covenant Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 (Current Ratio)</fullName>
                </value>
                <value>
                    <fullName>2 (Quick Ratio)</fullName>
                </value>
                <value>
                    <fullName>3 (Working Capital)</fullName>
                </value>
                <value>
                    <fullName>4 (Net Worth)</fullName>
                </value>
                <value>
                    <fullName>5 (Individual Liquidity)</fullName>
                </value>
                <value>
                    <fullName>6 (Tangible Net Worth)</fullName>
                </value>
                <value>
                    <fullName>7 (Tangible Capital Base)</fullName>
                </value>
                <value>
                    <fullName>8 (Debt to Tangible Net Worth)</fullName>
                </value>
                <value>
                    <fullName>9 (Consolidated Leverage Covenants)</fullName>
                </value>
                <value>
                    <fullName>10 (Debt To Capital Base)</fullName>
                </value>
                <value>
                    <fullName>11 (EBITDA To Interest)</fullName>
                </value>
                <value>
                    <fullName>12 (EBITDA (After Taxes and Distributions) To Interest Plus CMLTD)</fullName>
                </value>
                <value>
                    <fullName>13 (EBITDA (After Taxes, Distributions and Unfinanced CAPEX) To Interest Plus CMLTD)</fullName>
                </value>
                <value>
                    <fullName>14 (EBITDA to CMLTD Plus Interest)</fullName>
                </value>
                <value>
                    <fullName>15 (EBITDA (after Distributions) To CMLTD Plus Interest)</fullName>
                </value>
                <value>
                    <fullName>16 (Fixed Charge Coverage)</fullName>
                </value>
                <value>
                    <fullName>17 (Funded Debt to EBITDA)</fullName>
                </value>
                <value>
                    <fullName>18 (Senior Debt to EBITDA)</fullName>
                </value>
                <value>
                    <fullName>19 (Cash Flow To CMLTD)</fullName>
                </value>
                <value>
                    <fullName>20 (Cash Flow (After Distributions) To CMLTD)</fullName>
                </value>
                <value>
                    <fullName>21 (Cash Flow (After Distributions) To CMLTD Plus Interest)</fullName>
                </value>
                <value>
                    <fullName>22 (Funds Flow To CMLTD)</fullName>
                </value>
                <value>
                    <fullName>23 (Funds Flow (After Distributions) To CMLTD)</fullName>
                </value>
                <value>
                    <fullName>24 (EBIT To Interest)</fullName>
                </value>
                <value>
                    <fullName>25 (EBITA To Interest (After Distributions))</fullName>
                </value>
                <value>
                    <fullName>26 (Net Income To Interest)</fullName>
                </value>
                <value>
                    <fullName>27 (Personal Cash Flow To Personal Debt Service)</fullName>
                </value>
                <value>
                    <fullName>28 (Net Income)</fullName>
                </value>
                <value>
                    <fullName>29 (Net Income To Sales Revenue)</fullName>
                </value>
                <value>
                    <fullName>30 (EBITDA (After Operating Expenses) To Interest)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WKEDP__Expere_Financial_Statement_Covenant_Type__c</fullName>
        <description>This field is optional. It is used for document preparation. This field is used to map a Financial Statement Covenant Type to an Expere Covenant code.</description>
        <inlineHelpText>Used to map a Financial Statement Covenant Type to an Expere Covenant code.</inlineHelpText>
        <label>Expere Financial Statement Covenant Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 (Financial Projections)</fullName>
                </value>
                <value>
                    <fullName>2 (Aging Reports)</fullName>
                </value>
                <value>
                    <fullName>3 (Inventory Report)</fullName>
                </value>
                <value>
                    <fullName>4 (Contract Status - Percent of Completion Report)</fullName>
                </value>
                <value>
                    <fullName>9 (Federal And State Tax Returns)</fullName>
                </value>
                <value>
                    <fullName>10 (Federal Tax Returns Alone)</fullName>
                </value>
                <value>
                    <fullName>11 (State Tax Returns Alone)</fullName>
                </value>
                <value>
                    <fullName>99 (Other)</fullName>
                </value>
                <value>
                    <fullName>0 (Financial Statement)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Covenant Type</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Covenant Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Covenant Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>